--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "nfc-surveys",
+    "name": "NFC Surveys",
     "slug": "nfc-surveys",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "nfcsurveys",
+    "scheme": "nfcsurvey",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -14,9 +14,17 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nfcsurveys.app",
+      "infoPlist": {
+        "NFCReaderUsageDescription": "This app uses NFC to read survey tags and register your votes."
+      },
+      "entitlements": {
+        "com.apple.developer.nfc.readersession.formats": ["NDEF", "TAG"]
+      }
     },
     "android": {
+      "package": "com.nfcsurveys.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -30,7 +38,11 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      ["react-native-nfc-manager", {
+        "nfcTechRequest": true,
+        "selectIdentifiers": []
+      }]
     ],
     "experiments": {
       "typedRoutes": true
