add the website endpoints

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Get your Convex URL from https://dashboard.convex.dev
 EXPO_PUBLIC_CONVEX_URL=https://your-deployment.convex.cloud
+
+# Your web deployment domain (for NFC tags to link to)
+EXPO_PUBLIC_WEB_DOMAIN=your-app.vercel.app
