--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "expo export -p web",
+    "deploy": "pnpm run build:web && vercel --prod"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
