--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "author": "Saura",
   "scripts": {
     "start": "expo start",
+    "start:prod": "dotenv -e .env -o -- expo start --clear",
     "android": "expo run:android",
+    "android:prod": "dotenv -e .env -o -- expo run:android --variant release",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "web:prod": "dotenv -e .env -o -- expo start --web --clear",
     "build:web": "expo export -p web",
+    "build:web:prod": "dotenv -e .env -o -- expo export -p web",
+    "serve:prod": "pnpm build:web:prod && npx serve dist",
+    "convex:deploy": "dotenv -e .env -o -- npx convex deploy",
     "deploy": "pnpm run build:web && vercel --prod"
   },
   "dependencies": {
@@ -40,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "dotenv-cli": "^11.0.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
